javier-carnero/session-02/exercise-01/drupal-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: drupal
  namespace: exercise-01
  labels:
    app: drupal
    tier: frontend
    release: production
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app: drupal
      tier: frontend
      release: production
  template:
    metadata:
      labels:
        app: drupal
        tier: frontend
        release: production
    spec:
      containers:
      - name: drupal
        image: bitnami/drupal:8.6.1
        volumeMounts:
        - mountPath: /bitnami
          name: drupal-data
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        resources:
          requests:
            cpu: "40m"
            memory: "250Mi"
          limits:
            cpu: "80m"
            memory: "500Mi"
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /user/login
            port: http
          initialDelaySeconds: 540
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /user/login
            port: http
          initialDelaySeconds: 480
      volumes:
      - name: drupal-data
        persistentVolumeClaim:
          claimName: drupal-pvc
