javier-carnero/session-02/exercise-01/mariadb-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mariadb
  namespace: exercise-01
  labels:
    app: mariadb
    tier: backend
spec:
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
      tier: backend
  template:
    metadata:
      labels:
        app: mariadb
        tier: backend
    spec:
      containers:
      - name: mariadb
        image: bitnami/mariadb:latest
        ports:
          - name: mysql
            containerPort: 3306
        resources:
          requests:
            cpu: "25m"
            memory: "250Mi"
          limits:
            cpu: "50m"
            memory: "500Mi"
        livenessProbe:
          exec:
            command: ["sh", "-c", "exec mysqladmin status -uroot -p$MARIADB_ROOT_PASSWORD"]
          initialDelaySeconds: 60
          periodSeconds: 30
        readinessProbe:
          exec:
            command: ["sh", "-c", "exec mysqladmin status -uroot -p$MARIADB_ROOT_PASSWORD"]
          initialDelaySeconds: 15
          periodSeconds: 5
