javier-carnero/session-02/exercise-01/mariadb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  namespace: exercise-01
  labels:
    app: mariadb
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
      tier: backend
  serviceName: mariadb
  template:
    metadata:
      labels:
        app: mariadb
        tier: backend
    spec:
      terminationGracePeriodSeconds: 10
      securityContext:
        runAsUser: 1001
        fsGroup: 1001
      containers:
      - name: mariadb
        image: bitnami/mariadb:10.1
        volumeMounts:
        - mountPath: /bitnami/mariadb
          name: mariadb-data
        ports:
          - name: mysql
            containerPort: 3306
        resources:
          requests:
            cpu: "25m"
            memory: "250Mi"
          limits:
            cpu: "50m"
            memory: "500Mi"
        livenessProbe:
          exec:
            command: ["sh", "-c", "exec mysqladmin status -uroot -p$MARIADB_ROOT_PASSWORD"]
          initialDelaySeconds: 60
          periodSeconds: 30
        readinessProbe:
          exec:
            command: ["sh", "-c", "exec mysqladmin status -uroot -p$MARIADB_ROOT_PASSWORD"]
          initialDelaySeconds: 15
          periodSeconds: 5
  volumeClaimTemplates:
  - metadata:
      name: mariadb-data
      namespace: exercise-01
      labels:
        app: wordpress
        type: backend
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
