javier-carnero/session-02/exercise-01/wordpress-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordpress
  namespace: exercise-01
  labels:
    app: wordpress
    tier: frontend
    release: production
spec:
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
      release: production
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
        release: production
    spec:
      containers:
      - name: wordpress
        image: bitnami/wordpress:4.9.8
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        resources:
          requests:
            cpu: "40m"
            memory: "250Mi"
          limits:
            cpu: "80m"
            memory: "500Mi"
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /wp-login.php
            port: 80
          initialDelaySeconds: 300
          periodSeconds: 30
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /wp-login.php
            port: 80
          initialDelaySeconds: 180
          periodSeconds: 15
