javier-carnero/session-02/exercise-01/drupal-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: drupal
  namespace: exercise-01
  labels:
    app: drupal
    tier: frontend
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
  selector:
    app: drupal
    tier: frontend
