javier-carnero/session-02/exercise-01/mariadb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: exercise-01
  labels:
    app: mariadb
    tier: backend
spec:
  type: ClusterIP
  ports:
    - name: mysql
      port: 3306
      targetPort: mysql
  selector:
    app: mariadb
    tier: backend
