javier-carnero/session-02/exercise-01/wordpress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: exercise-01
  labels:
    app: wordpress
    tier: frontend
spec:
  type: NodePort
  ports:
    - name: frontend
      port: 80
      targetPort: http-server
  selector:
    app: wordpress
    tier: frontend
