javier-carnero/session-02/exercise-01/ingress-drupal.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-drupal
  namespace: exercise-01
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/configuration-snippet: |
      sub_filter / /drupal/;
      sub_filter_once off;
spec:
  tls:
  - hosts:
    - drupal.myblog.com
    secretName: dp-sslcerts
  rules:
  - host: drupal.myblog.com
    http:
      paths:
        - path: /drupal
          backend:
            serviceName: drupal
            servicePort: http
