javier-carnero/session-02/exercise-01/ingress-wordpress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-wordpress
  namespace: exercise-01
spec:
  tls:
  - hosts:
    - myblog.com
    secretName: wp-sslcerts
  rules:
  - host: myblog.com
    http:
      paths:
        - path: /
          backend:
            serviceName: wordpress
            servicePort: http
