javier-carnero/session-02/exercise-01/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: exercise-01
spec:
  tls:
  - hosts:
    - myblog.com
    secretName: wp-sslcerts
  - hosts:
    - drupal.myblog.com
    secretName: dp-sslcerts
  rules:
  - host: myblog.com
    http:
      paths:
        - path: /
          backend:
            serviceName: wordpress
            servicePort: http
  - host: drupal.myblog.com
    http:
      paths:
        - path: /
          backend:
            serviceName: drupal
            servicePort: http
